Att of Index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/filme-principal.css">
+    <link rel="stylesheet" href="style/botao.css">
 
 
 
@@ -23,6 +25,27 @@
             </nav>
         </div>
     </header>
+
+    <main>
+      <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">Ataque dos Titãs</h3>
+                <p class="descricao">Para escapar dos titãs, gigantes devoradores de homens, a humanidade se refugiou em cidades cercadas por enormes muralhas. Quando eles voltam a atacar, Eren Yeager se junta à luta para combater as criaturas.</p>
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        <i class="fa-solid fa-play"></i>
+                        ASSISTIR AGORA
+                    </button>
+                    <button role="button" class="botao">
+                        <i class="fa-solid fa-circle-info"></i>
+                        MAIS INFORMAÇÕES
+                    </button>
+                </div>
+            </div>
+      </div>
+    </main>
+
+    <script src="https://kit.fontawesome.com/3c0e17c22d.js" crossorigin="anonymous"></script>
     
 </body>
 </html>
